# ewsp

./: .gitignore  CHANGELOG.md  CHANGELOG_RU.md  CMakeLists.txt  README.md  README_RU.md
.github/workflows/: ci.yml  release.yml
bindings/kotlin/: build.gradle.kts  settings.gradle.kts
bindings/kotlin/jni/: CMakeLists.txt  ewsp_core_jni.c
bindings/kotlin/src/main/kotlin/org/wakelink/ewsp/: Crypto.kt  CryptoNative.kt  CryptoPure.kt
bindings/kotlin/src/test/kotlin/org/wakelink/ewsp/: CryptoTest.kt  PacketTest.kt
bindings/python/: __init__.py  crypto_pure.py  ewsp_core.py  pyproject.toml
bindings/python/tests/: __init__.py  conftest.py  test_binding.py
fuzz/: README.md  README_RU.md  fuzz_crypto.c  fuzz_json.c  fuzz_packet.c
include/: ewsp.h  ewsp_chain.h  ewsp_commands.h  ewsp_crypto.h  ewsp_errors.h  ewsp_json.h  ewsp_models.h  ewsp_packet.h  ewsp_session.h  ewsp_types.h
src/: ewsp.c  ewsp_chain.c  ewsp_commands.c  ewsp_crypto.c  ewsp_errors.c  ewsp_json.c  ewsp_models.c  ewsp_packet.c  ewsp_session.c
tests/: test_chain.c  test_commands.c  test_crypto.c  test_errors.c  test_json.c  test_main.c  test_models.c  test_packet.c  test_session.c
