[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ewsp-core"
version = "1.0.0"
description = "EWSP Core Python Bindings - Unified crypto for WakeLink Protocol"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "deadboizxc" }
]
keywords = [
    "cryptography",
    "xchacha20",
    "poly1305",
    "aead",
    "wakelink",
    "iot",
    "embedded"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = []  # No dependencies - pure Python fallback

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/deadboizxc/wakelink"
Repository = "https://github.com/deadboizxc/wakelink/tree/main/ewsp-core"
Documentation = "https://github.com/deadboizxc/wakelink/blob/main/ewsp-core/README.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["bindings.python*"]

[tool.setuptools.package-data]
"bindings.python" = ["*.so", "*.dll", "*.dylib"]

[tool.pytest.ini_options]
testpaths = ["bindings/python/tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["bindings/python"]
omit = ["bindings/python/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
